--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,15 @@
-body{
-    background-color: black;
+*{
+    font-family: "Inter";
 }
+li{
+    list-style: none
+}
+a{
+    text-decoration: none
+}
+ul{
+    padding: 0;
+    margin: 0 !important;
+}
+@import './parts/header';
+@import './parts/home';
