--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,60 @@
 body{
     background-color: black;
 }
+// .swiper_line{
+//     height: 957px;
+//     background-color: #2A323A;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+    
+//     .slider_tittle{
+//         align-self: stretch;
+//         color: #FFF;
+//         text-align: center;
+//         font-family: Habibi;
+//         font-size: 36px;
+//         font-style: normal;
+//         font-weight: 400;
+//         line-height: normal;
+//     }
+//     .swiper-wrapper{
+//         width: 100%;
+
+//             padding: 75px 0;
+//         .slide_item{
+//             width: 100%;
+//             border: 1px solid red;
+
+//             img{
+//                 width: 100%;
+//             }
+//             .col-4{
+//                 padding-left: 88px;
+//                 h3{
+
+//                     align-self: stretch;
+//                     color: #FFF;
+//                     font-family: Inter;
+//                     font-size: 26.021px;
+//                     font-style: normal;
+//                     font-weight: 600;
+//                     line-height: normal;
+//                     width: fit-content;
+//                 }
+//                 .left_info{
+//                     padding-top: 39px;
+//                     h4{
+//                         color: #FFF;
+//                         font-family: Inter;
+//                         font-size: 23.13px;
+//                         font-style: normal;
+//                         font-weight: 500;
+//                         line-height: normal;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
