--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ ul {
   margin: 0 !important;
 }
 
+h2 {
+  margin-bottom: 0 !important;
+}
+
 .header {
   background-color: #2A323A;
   padding: 21px 0;
@@ -34,6 +38,7 @@ ul {
   background-image: url(/images/home_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   height: 559px;
 }
 .home .container .home_wrapper {
@@ -50,4 +55,66 @@ ul {
 }
 .home .container .home_wrapper .home_link img {
   margin-left: 13px;
+}
+
+.filter {
+  background-color: #384248;
+  padding: 116px 0;
+}
+.filter .container .filter_wrapper .filter_title {
+  color: #fff;
+  font-family: "Inter";
+  font-size: 36px;
+  font-weight: 400;
+}
+
+.footer {
+  background-color: #2e363e;
+  padding: 113px 0;
+}
+.footer .container .footer_wrapper .footer_logo_text span {
+  color: #bfbfbf;
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 14px;
+}
+.footer .container .footer_wrapper .footer_logo_text p {
+  color: #bfbfbf;
+  font-size: 11.565px;
+  font-weight: 400;
+  margin-top: 19px;
+}
+.footer .container .footer_wrapper .footer_right {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+.footer .container .footer_wrapper .footer_right .footer_number {
+  color: #fff;
+  font-size: 18.793px;
+  font-weight: 400;
+  text-decoration: none;
+}
+.footer .container .footer_wrapper .footer_right .footer_number img {
+  margin-right: 10px;
+}
+.footer .container .footer_wrapper .footer_right .footer_time {
+  color: #bfbfbf;
+  font-size: 11.565px;
+  font-weight: 400;
+  margin-top: 14px;
+}
+.footer .container .footer_wrapper .footer_right .footer_email {
+  color: #fff;
+  font-size: 18.793px;
+  font-weight: 400;
+  text-decoration: none;
+  margin-top: 27px;
+}
+.footer .container .footer_wrapper .footer_right .footer_social_icons {
+  margin-top: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  gap: 33px;
 }/*# sourceMappingURL=style.css.map */
