--- a/css/parts/_home.scss
+++ b/css/parts/_home.scss
@@ -2,6 +2,7 @@
     background-image: url(/images/home_bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 559px;
     .container{
         .home_wrapper{
