--- a/css/style.scss
+++ b/css/style.scss
@@ -1,15 +1,20 @@
-*{
-    font-family: "Inter";
+* {
+  font-family: "Inter";
 }
-li{
-    list-style: none
+li {
+  list-style: none;
 }
-a{
-    text-decoration: none
+a {
+  text-decoration: none;
 }
-ul{
-    padding: 0;
-    margin: 0 !important;
+ul {
+  padding: 0;
+  margin: 0 !important;
 }
-@import './parts/header';
-@import './parts/home';
+h2 {
+  margin-bottom: 0 !important;
+}
+@import "./parts/header";
+@import "./parts/home";
+@import "./parts/filter";
+@import "./parts/footer";
