--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ h2 {
   margin-bottom: 0 !important;
 }
 
+p {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 .header {
   background-color: #2A323A;
   padding: 21px 0;
@@ -66,6 +71,94 @@ h2 {
   font-family: "Inter";
   font-size: 36px;
   font-weight: 400;
+}
+
+.carousel {
+  background-color: #2a323a;
+  padding: 93px 0;
+}
+.carousel .carousel_title {
+  color: white;
+  text-align: center;
+  padding-bottom: 75px;
+}
+.carousel .swiper-wrapper .swiper-slide {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+.carousel .swiper-wrapper .swiper-slide .swiper_img img {
+  width: 100%;
+}
+.carousel .swiper-wrapper .swiper-slide .about_car {
+  margin-left: 88px;
+  color: white;
+  position: relative;
+}
+.carousel .swiper-wrapper .swiper-slide .about_car h4 {
+  font-size: 26.021px;
+  font-weight: 600;
+  margin-bottom: 39px;
+}
+.carousel .swiper-wrapper .swiper-slide .about_car .car_p {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.carousel .swiper-wrapper .swiper-slide .about_car .car_p p {
+  font-size: 22px;
+  font-weight: 500;
+}
+.carousel .swiper-wrapper .swiper-slide .about_car .about_car_link {
+  position: absolute;
+  bottom: 30px;
+  margin-top: 112px;
+}
+.carousel .swiper-wrapper .swiper-slide .about_car .about_car_link a {
+  color: white;
+  font-size: 18.79px;
+  font-weight: 400;
+}
+.carousel .swiper-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60px;
+}
+.carousel .swiper-bottom .swiper-button-prevv {
+  transform: rotate(-180deg);
+  padding: 20px;
+}
+.carousel .swiper-bottom .swiper-button-nextt {
+  padding: 20px;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: var(--swiper-pagination-bottom, 8px);
+  top: var(--swiper-pagination-top, auto);
+  left: 0;
+  width: auto !important;
+}
+
+.swiper-pagination {
+  position: unset !important;
+  text-align: center;
+  transition: 0.3s opacity;
+  transform: translate3d(0, 0, 0);
+  z-index: 10;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: black !important;
+  opacity: var(--swiper-pagination-bullet-opacity, 1);
+}
+
+.swiper-pagination-bullet {
+  width: 14px !important;
+  height: 14px !important;
+  background-color: white !important;
 }
 
 .footer {
