--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,12 @@ ul {
 h2 {
   margin-bottom: 0 !important;
 }
+p {
+  padding: 0 !important;
+  margin: 0 !important;
+}
 @import "./parts/header";
 @import "./parts/home";
 @import "./parts/filter";
+@import "./parts/carousel";
 @import "./parts/footer";
